samples/_failures_safe/1761692072_0a08a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0f779e4.c: In function ‘main’:
./samples/SAFE/__tmp_b0f779e4.c:129:12: error: missing terminating " character
  129 |     printf("Enter text to tokenize
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b0f779e4.c:129:5: error: expected expression at end of input
  129 |     printf("Enter text to tokenize
      |     ^~~~~~
./samples/SAFE/__tmp_b0f779e4.c:129:5: error: expected declaration or statement at end of input
